--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
   </head>
 
   <h1>About me</h1>
-  <img src="https://drive.google.com/file/d/1L-ziQunnb01Gq6TtwWFkqANbmoGYHfAE/view?usp=sharing" alt="Riya Kejriwal">
+  <img src="https://www.dropbox.com/s/j4gaokz17r7o5lq/kejriwal_riya.jpg?dl=0">
 </html>
