--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <title>Riya Kejriwal</title>
   </head>
-
-  <h1>About me</h1>
-  <img src="https://github.com/RiyaKejriwal/RiyaKejriwal.github.io/blob/24fd9d1b58c26126c929e2617f6ac867d368c902/kejriwal_riya.jpg" width="200"/>
+  <body>
+    <h1>About me</h1>
+    <img src="https://github.com/RiyaKejriwal/RiyaKejriwal.github.io/blob/24fd9d1b58c26126c929e2617f6ac867d368c902/kejriwal_riya.jpg" width="200"/>
+  </body>
 </html>
