--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-# RiyaKejriwal.github.io
 <!DOCTYPE html>
 <html>
   <head>
@@ -6,7 +5,9 @@
     <title>Riya Kejriwal</title>
   </head>
   <body>
-    <h1>About me</h1>
-    <img src="kejriwal_riya.jpg" width="500"/>
+	<h1>About me</h1>
+	
+	<p>Hello, my name is Riya Kejriwal. I am a recent graduate of Master's in Public Policy from the Hertie School in Berlin. I have a Bachelor's in Commerce from University of Delhi with a minor in Economics. My research interest lies in climate governance, economic equality, and also a little bit of digital governance.</p>
+    	<img src="kejriwal_riya.jpg" width="500"/>
   </body>
 </html>
