--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>Riya Kejriwal</title>
+    	<meta charset="utf-8">
+    	<title>Riya Kejriwal</title>
+	<link rel="icon" href="logo.png" type="image/png">
   </head>
   <body>
 	<h1>About me</h1>
