--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     	<title>Riya Kejriwal</title>
 	<link rel="icon" href="logo.png" type="image/png">
   </head>
-  <body>
-	<h1>About me</h1>
+  <body style="background-color:Lavender;">
+	<h1 style="color:DarkSlateGrey;">About me</h1>
 	
 	<p>Hello, my name is Riya Kejriwal. I am a recent graduate of Master's in Public Policy from the Hertie School in Berlin. I have a Bachelor's in Commerce from University of Delhi with a minor in Economics. My research interest lies in climate governance, economic equality, and also a little bit of digital governance.</p>
-    	<img src="kejriwal_riya.jpg" width="500"/>
+    	<img src="kejriwal_riya.jpg" width="300" align="centre"/>
   </body>
 </html>
