--- a/index.html
+++ b/index.html
@@ -6,9 +6,18 @@
 	<link rel="icon" href="logo.png" type="image/png">
   </head>
   <body style="background-color:Lavender;">
-	<h1 style="color:DarkSlateGrey;">About me</h1>
+	<h1 style="color:LightSeaGreen;">About me</h1>
 	
-	<p>Hello, my name is Riya Kejriwal. I am a recent graduate of Master's in Public Policy from the Hertie School in Berlin. I have a Bachelor's in Commerce from University of Delhi with a minor in Economics. My research interest lies in climate governance, economic equality, and also a little bit of digital governance.</p>
-    	<img src="kejriwal_riya.jpg" width="300" align="centre"/>
+	<p>Hello, my name is Riya Kejriwal. I am a recent graduate of Master's in Public Policy from the <a href="https://www.hertie-school.org/en/">Hertie School</a> in Berlin. I have a Bachelor's in Commerce (Honours) from <a href="https://www.du.ac.in/">University of Delhi</a> with a minor in Economics. My research interest lies in climate governance, economic equality, and also a little bit of digital governance.</p>
+    	<img src="kejriwal_riya.jpg" width="300" class="center"/>
   </body>
 </html>
+
+<style>
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+</style>
