--- a/index.html
+++ b/index.html
@@ -1,23 +1,47 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    	<meta charset="utf-8">
-    	<title>Riya Kejriwal</title>
-	<link rel="icon" href="logo.png" type="image/png">
-  </head>
-  <body style="background-color:Lavender;">
-	<h1 style="color:LightSeaGreen;">About me</h1>
-	
-	<p>Hello, my name is Riya Kejriwal. I am a recent graduate of Master's in Public Policy from the <a href="https://www.hertie-school.org/en/">Hertie School</a> in Berlin. I have a Bachelor's in Commerce (Honours) from <a href="https://www.du.ac.in/">University of Delhi</a> with a minor in Economics. My research interest lies in climate governance, economic equality, and also a little bit of digital governance.</p>
-    	<img src="kejriwal_riya.jpg" width="300" class="center"/>
-  </body>
-</html>
-
-<style>
-.center {
-  display: block;
+<head>
+  <meta charset="utf-8">
+  <title>Riya Kejriwal</title>
+  <link rel="icon" href="logo.png" type="image/png">
+  <style>
+    body {
+      background-color: Lavender;
+    }
+	h1 {
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
-}
-</style>
+  color: LightSeaGreen;
+  padding-left: 20px;
+  padding-top: 20px;
+  border-bottom: 1px solid grey;
+	}
+    .center {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      max-width: 40%;
+      height: auto;
+    }
+    a {
+      text-decoration: none; 
+    }
+    p {
+      text-align: justify; /* Justify the text */
+      padding-left: 20px;
+      padding-right: 20px;
+      padding-top: 5px;
+    }
+    @media screen and (max-width: 600px) {
+      .center {
+        width: 80%;
+      }
+    }
+  </style>
+</head>
+<body>
+  <h1>About me</h1>
+  <p>Hello, my name is Riya Kejriwal. I am a recent graduate of Master's in Public Policy from the <a href="https://www.hertie-school.org/en/">Hertie School</a> in Berlin (Class of 2023). I have a Bachelor's in Commerce (Honours) from <a href="https://www.du.ac.in/">University of Delhi</a> with a minor in Economics. My research interest lies in climate governance, economic equality, and also a little bit of digital governance.</p>
+    	<img src="kejriwal_riya.jpg" class="center"/>
+  </body>
+</html>
