--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Riya Kejriwal</title>
   <link rel="icon" href="logo.png" type="image/png">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <style>
     body {
       background-color: Lavender;
@@ -14,34 +15,29 @@
   color: LightSeaGreen;
   padding-left: 20px;
   padding-top: 20px;
-  border-bottom: 1px solid grey;
+  border-bottom: 1px solid Ivory;
 	}
     .center {
       display: block;
       margin-left: auto;
       margin-right: auto;
-      max-width: 40%;
+      max-width: 30%;
       height: auto;
     }
     a {
       text-decoration: none; 
     }
     p {
-      text-align: justify; /* Justify the text */
+      text-align: justify;
       padding-left: 20px;
       padding-right: 20px;
       padding-top: 5px;
-    }
-    @media screen and (max-width: 600px) {
-      .center {
-        width: 80%;
-      }
     }
   </style>
 </head>
 <body>
   <h1>About me</h1>
-  <p>Hello, my name is Riya Kejriwal. I am a recent graduate of Master's in Public Policy from the <a href="https://www.hertie-school.org/en/">Hertie School</a> in Berlin (Class of 2023). I have a Bachelor's in Commerce (Honours) from <a href="https://www.du.ac.in/">University of Delhi</a> with a minor in Economics. My research interest lies in climate governance, economic equality, and also a little bit of digital governance.</p>
+  <p>Hello, my name is Riya Kejriwal. I am a recent graduate of Master's in Public Policy from the <a href="https://www.hertie-school.org/en/">Hertie School</a> in Berlin (Class of 2023). I have a Bachelor's in Commerce (Honours) from <a href="https://www.du.ac.in/">University of Delhi</a> with a minor in Economics. My research interest lies in climate governance, economic inquality, and also a little bit of digital governance.</p>
     	<img src="kejriwal_riya.jpg" class="center"/>
   </body>
 </html>
