--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Riya Kejriwal</title>
-  <link rel="icon" href="logo.png" type="image/png">
+  <link rel="icon" href="images/logo.png" type="image/png">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <style>
     body {
@@ -38,6 +38,6 @@
 <body>
   <h1>About me</h1>
   <p>Hello, my name is Riya Kejriwal. I am a recent graduate of Master's in Public Policy from the <a href="https://www.hertie-school.org/en/">Hertie School</a> in Berlin (Class of 2023). I have a Bachelor's in Commerce (Honours) from <a href="https://www.du.ac.in/">University of Delhi</a> with a minor in Economics. My research interest lies in climate governance, economic inquality, and also a little bit of digital governance.</p>
-    	<img src="kejriwal_riya.jpg" class="center"/>
+    	<img src="images/kejriwal_riya.jpg" class="center"/>
   </body>
 </html>
