--- a/index.html
+++ b/index.html
@@ -8,20 +8,21 @@
   <style>
     body {
       background-color: Lavender;
+      font-family: Helvetica, sans-serif;
     }
 	h1 {
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 50px;
+  margin-right: 50px;
+  margin-top: 20px;
   color: LightSeaGreen;
-  padding-left: 20px;
-  padding-top: 20px;
+  padding-bottom: 3px;
   border-bottom: 1px solid Ivory;
 	}
     .center {
       display: block;
       margin-left: auto;
       margin-right: auto;
-      max-width: 30%;
+      max-width: auto;
       height: auto;
     }
     a {
@@ -29,14 +30,14 @@
     }
     p {
       text-align: justify;
-      padding-left: 20px;
-      padding-right: 20px;
+      margin-left: 50px;
+      margin-right: 50px;
       padding-top: 5px;
     }
   </style>
 </head>
 <body>
-  <h1>About me</h1>
+  <h1 style="font-family:Merriweather, serif;">About me</h1>
   <p>Hello, my name is Riya Kejriwal. I am a recent graduate of Master's in Public Policy from the <a href="https://www.hertie-school.org/en/">Hertie School</a> in Berlin (Class of 2023). I have a Bachelor's in Commerce (Honours) from <a href="https://www.du.ac.in/">University of Delhi</a> with a minor in Economics. My research interest lies in climate governance, economic inquality, and also a little bit of digital governance.</p>
     	<img src="images/kejriwal_riya.jpg" class="center"/>
   </body>
