--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       font-family: Helvetica, sans-serif;
     }
 	h1 {
-  margin-left: 50px;
-  margin-right: 50px;
-  margin-top: 20px;
+  margin-left: 200px;
+  margin-right: 200px;
+  margin-top: 30px;
   color: LightSeaGreen;
   padding-bottom: 3px;
   border-bottom: 1px solid Ivory;
@@ -22,7 +22,7 @@
       display: block;
       margin-left: auto;
       margin-right: auto;
-      max-width: auto;
+      max-width: 50%;
       height: auto;
     }
     a {
@@ -30,8 +30,8 @@
     }
     p {
       text-align: justify;
-      margin-left: 50px;
-      margin-right: 50px;
+      margin-left: 200px;
+      margin-right: 200px;
       padding-top: 5px;
     }
   </style>
