--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       font-family: Helvetica, sans-serif;
     }
 	h1 {
-  margin-left: 200px;
-  margin-right: 200px;
+  margin-left: 150px;
+  margin-right: 150px;
   margin-top: 30px;
   color: LightSeaGreen;
   padding-bottom: 3px;
@@ -22,7 +22,7 @@
       display: block;
       margin-left: auto;
       margin-right: auto;
-      max-width: 50%;
+      max-width: 30%;
       height: auto;
     }
     a {
@@ -30,15 +30,23 @@
     }
     p {
       text-align: justify;
-      margin-left: 200px;
-      margin-right: 200px;
+      margin-left: 150px;
+      margin-right: 150px;
       padding-top: 5px;
+    }
+    @media screen and (max-width: 600px) {
+      h1 {
+        margin: 20px;
+      }
+      p {
+        margin: 20px;
+      }
     }
   </style>
 </head>
 <body>
   <h1 style="font-family:Merriweather, serif;">About me</h1>
-  <p>Hello, my name is Riya Kejriwal. I am a recent graduate of Master's in Public Policy from the <a href="https://www.hertie-school.org/en/">Hertie School</a> in Berlin (Class of 2023). I have a Bachelor's in Commerce (Honours) from <a href="https://www.du.ac.in/">University of Delhi</a> with a minor in Economics. My research interest lies in climate governance, economic inquality, and also a little bit of digital governance.</p>
+  <p>Hello, my name is Riya Kejriwal. I am a recent graduate of Master's in Public Policy from the <a href="https://www.hertie-school.org/en/">Hertie School</a> in Berlin (Class of 2023). I have a Bachelor's in Commerce (Honours) from <a href="https://www.du.ac.in/">University of Delhi</a> with a minor in Economics. My research interest lies in climate governance, economic inequality, and also a little bit of digital governance.</p>
     	<img src="images/kejriwal_riya.jpg" class="center"/>
   </body>
 </html>
