--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
       background-color: Lavender;
       font-family: Helvetica, sans-serif;
     }
-	h1 {
-  margin-left: 150px;
-  margin-right: 150px;
-  margin-top: 40px;
-  color: LightSeaGreen;
-  padding-bottom: 3px;
-  border-bottom: 1px solid Ivory;
-	}
+    h1 {
+      margin-left: 150px;
+      margin-right: 150px;
+      margin-top: 30px;
+      color: LightSeaGreen;
+      padding-bottom: 3px;
+      border-bottom: 1px solid Ivory;
+    }
+    .container {
+      max-width: 600px;
+      margin: 0, auto;
+      padding: 20px;
+    } 
     .center {
       display: block;
       margin-left: auto;
@@ -47,6 +52,8 @@
 <body>
   <h1 style="font-family:Merriweather, serif;">About me</h1>
   <p>Hello, my name is Riya Kejriwal. I am a recent graduate of Master's in Public Policy from the <a href="https://www.hertie-school.org/en/">Hertie School</a> in Berlin (Class of 2023). I have a Bachelor's in Commerce (Honours) from <a href="https://www.du.ac.in/">University of Delhi</a> with a minor in Economics. My research interest lies in climate governance, economic inequality, and also a little bit of digital governance.</p>
+     <div class="container">
     	<img src="images/kejriwal_riya.jpg" class="center"/>
+      </div>
   </body>
 </html>
