--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     }
     .container {
       max-width: 600px;
-      margin: 0, auto;
-      padding: 20px;
+      margin: 0 auto;
+      padding: 10px;
     } 
     .center {
       display: block;
