--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
 </head>
 <body>
   <h1 style="font-family:Merriweather, serif;">About me</h1>
-  <p>Hello, my name is Riya Kejriwal. I am a recent graduate of Master's in Public Policy from the <a href="https://www.hertie-school.org/en/">Hertie School</a> in Berlin (Class of 2023). I have a Bachelor's in Commerce (Honours) from <a href="https://www.du.ac.in/">University of Delhi</a> with a minor in Economics. My research interest lies in climate governance, economic inequality, and also a little bit of digital governance.</p>
-     <div class="container">
+  <p>Hello, my name is Riya Kejriwal. I am a recent graduate of Master's in Public Policy from the <a href="https://www.hertie-school.org/en/">Hertie School</a> in Berlin (Class of 2023).</br>I have a Bachelor's in Commerce (Honours) from <a href="https://www.du.ac.in/">University of Delhi</a> with a minor in Economics.</br>My research interest lies in climate governance, economic inequality, and also a little bit of digital governance.</p>
+  <div class="container">
     	<img src="images/kejriwal_riya.jpg" class="center"/>
-      </div>
+  </div>
+  <p> First things first, here is my <a href="https://open.spotify.com/user/31k6znri2tz2kr3qufs6d6on5q64?si=g-33w4OWQvSyMSg0Z0e68A">spotify</a>.
   </body>
 </html>
