--- a/index.html
+++ b/index.html
@@ -10,51 +10,45 @@
       background-color: Lavender;
       font-family: Helvetica, sans-serif;
     }
+    div {
+        width: 600px;
+        margin: 30px auto;
+        text-align: justify;
+    }
     h1 {
-      margin-left: 150px;
-      margin-right: 150px;
-      margin-top: 30px;
       color: LightSeaGreen;
-      padding-bottom: 3px;
+      font-family:Merriweather, serif;
+      padding-bottom:2px;
       border-bottom: 1px solid Ivory;
     }
-    .container {
-      max-width: 600px;
-      margin: 0 auto;
-      padding: 10px;
-    } 
     .center {
       display: block;
-      margin-left: auto;
       margin-right: auto;
+      margin-left: auto;
+      padding-top: 10px;
+      padding-bottom: 10px;
       max-width: 50%;
       height: auto;
     }
     a {
       text-decoration: none; 
     }
-    p {
-      text-align: justify;
-      margin-left: 150px;
-      margin-right: 150px;
-      padding-top: 5px;
-    }
     @media screen and (max-width: 600px) {
-      h1 {
-        margin: 20px;
-      }
-      p {
-        margin: 20px;
-      }
-    }
+       div {
+           margin: 0 auto;
+           width: auto;
+         }
+     }
   </style>
 </head>
+
 <body>
-  <h1 style="font-family:Merriweather, serif;">About me</h1>
-  <p>Hello, my name is Riya Kejriwal. I am a recent graduate of Master's in Public Policy from the <a href="https://www.hertie-school.org/en/">Hertie School</a> in Berlin (Class of 2023).</br>I have a Bachelor's in Commerce (Honours) from <a href="https://www.du.ac.in/">University of Delhi</a> with a minor in Economics.</br>My research interest lies in climate governance, economic inequality, and also a little bit of digital governance.</p>
-  <div class="container">
+<div>
+  <h1>About me</h1>
+  <p>Hello, my name is Riya Kejriwal. I am a recent graduate of Master's in Public Policy from <a href="https://www.hertie-school.org/en/">Hertie School</a> in Berlin (Class of 2023). I have a Bachelor's in Commerce (Honours) from University of Delhi with a minor in Economics. My research interest lies in climate governance, economic inequality, and also a little bit of digital governance.</p>
     	<img src="images/kejriwal_riya.jpg" class="center"/>
-  </div>
-  <p> First things first, here is my <a href="https://open.spotify.com/user/31k6znri2tz2kr3qufs6d6on5q64?si=g-33w4OWQvSyMSg0Z0e68A">spotify</a>.
-  </body>
+  <p> First things first, here is my <a href="https://open.spotify.com/user/31k6znri2tz2kr3qufs6d6on5q64?si=g-33w4OWQvSyMSg0Z0e68A">Spotify</a>.
+</div>
+
+</body>
 </html>
