--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     }
     @media screen and (max-width: 600px) {
        div {
-           margin: 0 auto;
+           margin: 20px;
            width: auto;
          }
      }
