--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       font-family: Helvetica, sans-serif;
     }
     div {
-        width: 600px;
+        width: 50%;
         margin: 30px auto;
         text-align: justify;
     }
@@ -27,11 +27,12 @@
       margin-left: auto;
       padding-top: 10px;
       padding-bottom: 10px;
-      max-width: 50%;
+      width: 300px;
       height: auto;
     }
     a {
-      text-decoration: none; 
+      text-decoration: none;
+      color: DarkOrchid;
     }
     @media screen and (max-width: 600px) {
        div {
