--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
 <body>
 <div>
   <h1>About me</h1>
-  <p>Greetings! My name is Riya Kejriwal. I recently graduated with a Master in Public Policy specialising in Policy Analysis from <a href="https://www.hertie-school.org/en/">Hertie School</a> in Berlin, Germany (Class of 2023). I hold a Bachelor in Commerce (Honours) from the University of Delhi with a minor in Economics. I am very much into working with data to understand and address policy issues. I am proficient in R and currently making progress on Python skill. I am broadly interested in sustainability and climate policy, economic inequality and taxation, and behavioural economics.</p>
+  <p>Greetings! My name is Riya Kejriwal. I recently graduated with a Master in Public Policy specialising in Policy Analysis from <a href="https://www.hertie-school.org/en/">Hertie School</a> in Berlin, Germany (Class of 2023). I hold a Bachelor in Commerce (Honours) from the University of Delhi with a minor in Economics.</p>
+
+<p>I am very much into working with data to understand and address policy issues. I am proficient in R and currently making progress on Python skill. I am broadly interested in sustainability and climate policy, economic inequality and taxation, and behavioural economics.</p>
     	<img src="images/kejriwal_riya.jpg" class="center"/>
   <p> First things first, here is my <a href="https://open.spotify.com/user/31k6znri2tz2kr3qufs6d6on5q64?si=g-33w4OWQvSyMSg0Z0e68A">Spotify</a>.
 </div>
