--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <p>I am very much into working with data to understand and address policy issues. I am proficient in R and currently making progress on Python skill. I am broadly interested in sustainability and climate policy, economic inequality and taxation, and behavioural economics.</p>
     	<img src="images/kejriwal_riya.jpg" class="center"/>
-  <p> First things first, here is my <a href="https://open.spotify.com/user/31k6znri2tz2kr3qufs6d6on5q64?si=g-33w4OWQvSyMSg0Z0e68A">Spotify</a>.
+  <p> First things first, here is my <a href="https://open.spotify.com/user/31k6znri2tz2kr3qufs6d6on5q64?si=g-33w4OWQvSyMSg0Z0e68A">Spotify</a>. I listen to a lot of other artists which aren't included in the playlists. My absolute favourites are Isak Danielson and Miley Cyrus. If you are into instrumental, try Ludovico Einaudi's compositions. 
 </div>
 
 </body>
