--- a/index.html
+++ b/index.html
@@ -49,20 +49,20 @@
   <h1>About me</h1>
   <p>Greetings! My name is Riya Kejriwal. I recently graduated with a Master in Public Policy specialising in Policy Analysis from <a href="https://www.hertie-school.org/en/">Hertie School</a> in Berlin, Germany (Class of 2023). I hold a Bachelor in Commerce (Honours) from the University of Delhi with a minor in Economics.</p>
 
-  <p>I am very much into working with data to understand and address policy issues. I am proficient in R and currently making progress on Python skill. I am broadly interested in sustainability and climate policy, economic inequality and taxation, and behavioural economics. Access my CV here.</p>
+  <p>I am very much into working with data to understand and address policy issues. I am good with R and currently making progress on Python skill. I am broadly interested in sustainability and climate policy, economic inequality and taxation, and behavioural economics. Access my CV <a href="CV/Kejriwal_CV.pdf">here</a>.</p>
     	
   <img src="images/kejriwal_riya.jpg" class="center"/>
   
-  <p>Here is my <a href="https://open.spotify.com/user/31k6znri2tz2kr3qufs6d6on5q64?si=g-33w4OWQvSyMSg0Z0e68A">Spotify</a>. I listen to a lot of other artists which aren't included in the playlists. My absolute favourites are Isak Danielson and Miley Cyrus. If you are into instrumental, try Ludovico Einaudi's compositions.</p> 
+  <p><a href="https://open.spotify.com/user/31k6znri2tz2kr3qufs6d6on5q64?si=g-33w4OWQvSyMSg0Z0e68A">Here</a> is my Spotify. I listen to a lot of other artists which aren't included in the playlists. My absolute favourites are Isak Danielson and Miley Cyrus. If you are into instrumental, try-out Ludovico Einaudi's compositions.</p> 
 
    <p>Currently reading <a href="https://www.goodreads.com/book/show/57191790-the-red-deal">The Red Deal</a> and <a href="https://www.goodreads.com/book/show/60332254-india-is-broken">India is Broken</a>. Favourites: <a href="https://www.goodreads.com/book/show/29940854-capital-without-borders">Capital without Borders</a> and <a href="https://www.goodreads.com/book/show/58985601-a-brief-history-of-equality">A Brief History of Equality</a>.</p>
  
-   <p>If you want to reach out, below is my contact.</p>
+   <p>If you want to reach out, my contact is below.</p>
 
    <p>
 	<i class="fa fa-envelope-square"></i>  <a href="mailto:r.kejriwal@hertie-school.org">r.kejriwal@hertie-school.org</a><br/>
 	<i class="fa fa-twitter-square"></i>  <a href="http://twitter.com/riya__kejriwal">@Riya__Kejriwal</a><br/>
-	<i class="fa fa-github-square"></i>  <a href="https://github.com/RiyaKejriwal">github.com/RiyaKejriwal</a>  
+	<i class="fa fa-github-square"></i>  <a href="https://github.com/RiyaKejriwal?tab=repositories">github.com/RiyaKejriwal</a>  
    </p>
 
 </div>
