--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <h1>About me</h1>
   <p>Greetings! My name is Riya Kejriwal. I recently graduated with a Master in Public Policy specialising in Policy Analysis from <a href="https://www.hertie-school.org/en/">Hertie School</a> in Berlin, Germany (Class of 2023). I hold a Bachelor in Commerce (Honours) from the University of Delhi with a minor in Economics.</p>
 
-  <p>I am very much into working with data to understand and address policy issues. I am good with R and currently making progress on Python skill. I am broadly interested in sustainability and climate policy, economic inequality and taxation, and behavioural economics. Access my CV <a href="CV/Kejriwal_Riya_CV.pdf">here</a>.</p>
+  <p>I am very much into working with data to understand and address policy issues. I am good with R and currently making progress on Python skill. I am broadly interested in sustainability and climate policy, economic inequality and taxation, and behavioural economics.</p>
     	
   <img src="images/kejriwal_riya.jpg" class="center"/>
   
@@ -60,8 +60,8 @@
    <p>If you want to reach out, my contact is below.</p>
 
    <p>
-	<i class="fa fa-envelope-square"></i>  <a href="mailto:r.kejriwal@hertie-school.org">r.kejriwal@hertie-school.org</a><br/>
-	<i class="fa fa-twitter-square"></i>  <a href="http://twitter.com/riya__kejriwal">@Riya__Kejriwal</a><br/>
+	<i class="fa fa-envelope-square"></i>  <a href="mailto:riya.kejriwal@outlook.com">riya.kejriwal@outlook.com</a><br/>
+	<i class="fa fa-twitter-square"></i>  <a href="https://twitter.com/Riya__Kejriwal">@Riya__Kejriwal</a><br/>
 	<i class="fa fa-github-square"></i>  <a href="https://github.com/RiyaKejriwal?tab=repositories">github.com/RiyaKejriwal</a>  
    </p>
 
