--- a/index.html
+++ b/index.html
@@ -65,6 +65,12 @@
 	<i class="fa fa-github-square"></i>  <a href="https://github.com/RiyaKejriwal?tab=repositories">github.com/RiyaKejriwal</a>  
    </p>
 
+ <p>My favourite quote:</p> 
+ 
+ <blockquote><i>Even if I knew that tomorrow the world would go to pieces, I would still plant my apple tree.</i></blockquote>
+
+ <p style="text-align:right; font-size:13px;">~ Attributed to Martin Luther (original person unknown)</p>
+
 </div>
 
 </body>
