--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 <body>
 <div>
   <h1>About me</h1>
-  <p>Greetings! My name is Riya Kejriwal. I recently graduated with a Master in Public Policy specialising in Policy Analysis from <a href="https://www.hertie-school.org/en/">Hertie School</a> in Berlin, Germany (Class of 2023). I hold a Bachelor in Commerce (Honours) from the University of Delhi with a minor in Economics.</p>
+  <p>Greetings! My name is Riya Kejriwal. I graduated with a Master in Public Policy specialising in Policy Analysis from <a href="https://www.hertie-school.org/en/">Hertie School</a> in Berlin, Germany (Class of 2023). I hold a Bachelor in Commerce (Honours) from the University of Delhi with a minor in Economics.</p>
 
-  <p>I am very much into working with data to understand and address policy issues. I am good with R and currently making progress on Python skill. I am broadly interested in sustainability and climate policy, economic inequality and taxation, and behavioural economics.</p>
+  <p>Recently there have been two turning points in my life regarding my preferred working area. One was a class I took during my master's degree called "Net Zero Energy Systems", in this, we looked in detail at the most polluting sectors (energy, industry, transport, and buildings), the challenges in decarbonisation, both current and in-development technologies for decarbonisation, and the current policy scenario to support decarbonisation and the shortcomings. The second is the current work I am doing as a climate policy analyst. I research about carbon pricing and also keep track of developments in carbon markets. These have solidifed my interest in carbon pricing, carbon markets and industrial decarbonisation. Apart from this, I am keen on economic inequality and taxation, and behavioural economics.</p>
     	
   <img src="images/kejriwal_riya.jpg" class="center"/>
   
