--- a/index.html
+++ b/index.html
@@ -47,10 +47,15 @@
 <body>
 <div>
   <h1>About me</h1>
-  <p>Greetings! My name is Riya Kejriwal. I graduated with a Master in Public Policy specialising in Policy Analysis from <a href="https://www.hertie-school.org/en/">Hertie School</a> in Berlin, Germany (Class of 2023). I hold a Bachelor in Commerce (Honours) from the University of Delhi with a minor in Economics.</p>
+  <p>Hi, welcome! I am Riya Kejriwal, a climate policy professional with a background in public policy, economics, and accounting.</p>
 
-  <p>Recently there have been two turning points in my life regarding my preferred working area. One was a class I took during my master's called 'Net Zero Energy Systems', in this, we looked in detail at the most polluting sectors (energy, industry, transport, and buildings), challenges in decarbonisation, both current and in-development technologies for decarbonisation, and the current policy scenario to support the goal and the shortcomings. The second is the current work I am doing as a climate policy analyst. I research about carbon pricing and also keep track of developments in carbon markets. These have solidifed my interest in carbon pricing, carbon markets and industrial decarbonisation.</p>
-  <p>Apart from this, I am keen on economic inequality and taxation, and behavioural economics.</p>
+  <p>I hold a Master in Public Policy from the Hertie School (Class of 2023) and a Bachelor in Commerce from the University of Delhi.</p>
+
+  <p>My interest in climate policy was shaped by two key experiences:</p>
+  <ul>
+    <li>A graduate course on <em>Net Zero Energy Systems</em>, which gave me a systems-level understanding of the decarbonisation scope, technologies, and challenges across sectors.</li>
+    <li>My most recent role as a Climate Policy Analyst, where I worked on a variety of projects — including global carbon pricing systems, transition finance, and corporate implementation of the EU CBAM.</li>
+  </ul>
     	
   <img src="images/kejriwal_riya.jpg" class="center"/>
   
