--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
   </ul>
     	
   <img src="images/kejriwal_riya.jpg" class="center"/>
-  
-  <p><a href="https://open.spotify.com/user/31k6znri2tz2kr3qufs6d6on5q64?si=g-33w4OWQvSyMSg0Z0e68A">Here</a> is my Spotify. I listen to a lot of other artists which aren't included in the playlists. My absolute favourites are Isak Danielson and Miley Cyrus. If you are into instrumental, try-out Ludovico Einaudi's compositions.</p> 
+
+  <h2 style="color: LightSeaGreen; font-family: Merriweather, serif; padding-top: 20px;">Fun Fact</h2>
+  <p>Give me the name of any country or city, and I can probably tell you whether they have a carbon pricing scheme (and what kind).</p>	
 
    <p>Currently reading <a href="https://www.goodreads.com/book/show/50998056-the-ministry-for-the-future">The Ministry for the Future</a> and <a href="https://www.goodreads.com/book/show/60332254-india-is-broken">India is Broken</a>. Favourites: <a href="https://www.goodreads.com/book/show/29940854-capital-without-borders">Capital without Borders</a> and <a href="https://www.goodreads.com/book/show/58985601-a-brief-history-of-equality">A Brief History of Equality</a>.</p>
  
