--- a/index.html
+++ b/index.html
@@ -52,11 +52,15 @@
   <p>I hold a Master in Public Policy from the Hertie School (Class of 2023) and a Bachelor in Commerce from the University of Delhi.</p>
 
   <p>My interest in climate policy was shaped by two key experiences:</p>
-  <ul>
-    <li>A graduate course on <em>Net Zero Energy Systems</em>, which gave me a systems-level understanding of the decarbonisation scope, technologies, and challenges across sectors.</li>
-    <li>My most recent role as a Climate Policy Analyst, where I worked on a variety of projects — including global carbon pricing systems, transition finance, and corporate implementation of the EU CBAM.</li>
-  </ul>
-    	
+  <ol style="padding-left: 20px; color: #34495e;">
+    <li style="margin-bottom: 15px;">
+    A graduate course on Net Zero Energy Systems, which gave me a systems-level understanding of the decarbonisation scope, technologies, and challenges across sectors.
+    </li>
+    <li style="margin-bottom: 15px;">
+    And, my most recent role as a Climate Policy Analyst, where I worked on a variety of projects — including global carbon pricing systems, transition finance, and corporate implementation of the EU CBAM.
+    </li>
+  </ol>
+	
   <img src="images/kejriwal_riya.jpg" class="center"/>
 
   <h2 style="color: LightSeaGreen; font-family: Merriweather, serif; padding-top: 20px;">Fun Fact</h2>
