--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <p>I hold a Master in Public Policy from the Hertie School (Class of 2023) and a Bachelor in Commerce from the University of Delhi.</p>
 
   <p>My interest in climate policy was shaped by two key experiences:</p>
-  <ol style="padding-left: 20px; color: #34495e;">
+  <ol style="padding-left: 20px;">
     <li style="margin-bottom: 15px;">
     A graduate course on Net Zero Energy Systems, which gave me a systems-level understanding of the decarbonisation scope, technologies, and challenges across sectors.
     </li>
