--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 	
   <img src="images/kejriwal_riya.jpg" class="center"/>
 
-  <p><strong>A fun fact about me:</strong> Give me the name of any country or city, and I can probably tell you whether they have a carbon pricing scheme (and what kind)!</p>	
+  <p><strong>A fun fact about me:</strong> Name any country or city, and I can probably tell you if they have a carbon pricing scheme (and what kind)!</p>	
 
    <p>Currently reading <a href="https://www.goodreads.com/book/show/50998056-the-ministry-for-the-future">The Ministry for the Future</a> and <a href="https://www.goodreads.com/book/show/60332254-india-is-broken">India is Broken</a>. Favourites: <a href="https://www.goodreads.com/book/show/29940854-capital-without-borders">Capital without Borders</a> and <a href="https://www.goodreads.com/book/show/58985601-a-brief-history-of-equality">A Brief History of Equality</a>.</p>
  
