--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
 <body>
 <div>
   <h1>About me</h1>
-  <p>Hi, welcome! I am Riya Kejriwal, a climate policy professional with a background in public policy, economics, and accounting.</p>
+  <p>Hi! I am Riya Kejriwal, a climate policy professional with a background in public policy, economics, and accounting.</p>
 
   <p>I hold a Master in Public Policy from the Hertie School (Class of 2023) and a Bachelor in Commerce from the University of Delhi.</p>
 
   <p>My interest in climate policy was shaped by two key experiences:</p>
   <ol style="padding-left: 20px;">
     <li style="margin-bottom: 15px;">
-    A graduate course on Net Zero Energy Systems, which gave me a systems-level understanding of the decarbonisation scope, technologies, and challenges across sectors.
+    A graduate course on Net Zero Energy Systems, which gave me a sectoral-level understanding of the decarbonisation scope, technologies, policies and challenges.
     </li>
     <li style="margin-bottom: 15px;">
     And, my most recent role as a Climate Policy Analyst, where I worked on a variety of projects — including global carbon pricing systems, transition finance, and corporate implementation of the EU CBAM.
@@ -63,9 +63,9 @@
 	
   <img src="images/kejriwal_riya.jpg" class="center"/>
 
-  <p><strong>A fun fact about me:</strong> Name any country or city, and I can probably tell you if they have a carbon pricing scheme (and what kind)!</p>	
+  <p><strong>A fun fact about me:</strong> Name any country or city, and I can probably tell you if they have a carbon pricing scheme (and what kind)! <em>...Ask me this over a game of chess &#128521;</em></p>	
 
-   <p>Currently reading <a href="https://www.goodreads.com/book/show/50998056-the-ministry-for-the-future">The Ministry for the Future</a> and <a href="https://www.goodreads.com/book/show/60332254-india-is-broken">India is Broken</a>. Favourites: <a href="https://www.goodreads.com/book/show/29940854-capital-without-borders">Capital without Borders</a> and <a href="https://www.goodreads.com/book/show/58985601-a-brief-history-of-equality">A Brief History of Equality</a>.</p>
+   <p>Currently reading <a href="https://www.goodreads.com/book/show/30289.The_Republic">The Republic</a> and <a href="https://www.goodreads.com/book/show/46114.The_Waves">The Waves</a>. Favourites: <a href="https://www.goodreads.com/book/show/29940854-capital-without-borders">Capital without Borders</a> and <a href="https://www.goodreads.com/book/show/58985601-a-brief-history-of-equality">A Brief History of Equality</a>.</p>
  
    <p>If you want to reach out, my contact is below:</p>
 
