--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <body>
 <div>
   <h1>About me</h1>
-  <p>Hi! I am Riya Kejriwal, a climate policy professional with a background in public policy, economics, and accounting.</p>
+  <p>Hi! I am Riya Kejriwal, an early-career climate policy professional with a background in public policy, economics, and accounting.</p>
 
   <p>I hold a Master in Public Policy from the Hertie School (Class of 2023) and a Bachelor in Commerce from the University of Delhi.</p>
 
@@ -67,17 +67,9 @@
 
    <p>Currently reading <a href="https://www.goodreads.com/book/show/30289.The_Republic">The Republic</a> and <a href="https://www.goodreads.com/book/show/46114.The_Waves">The Waves</a>. Favourites: <a href="https://www.goodreads.com/book/show/29940854-capital-without-borders">Capital without Borders</a> and <a href="https://www.goodreads.com/book/show/58985601-a-brief-history-of-equality">A Brief History of Equality</a>.</p>
  
-   <p>If you want to reach out, my contact is below:</p>
-
-   <p>
-	<i class="fa fa-envelope-square"></i>  <a href="mailto:riya.kejriwal@outlook.com">riya.kejriwal@outlook.com</a><br/>
-	<i class="fa fa-twitter-square"></i>  <a href="https://twitter.com/Riya__Kejriwal">@Riya__Kejriwal</a><br/>
-	<i class="fa fa-github-square"></i>  <a href="https://github.com/RiyaKejriwal?tab=repositories">github.com/RiyaKejriwal</a>  
-   </p>
-
- <p>My favourite quote:</p> 
+  <p>My favourite quote:</p> 
  
- <blockquote><i>Even if I knew that tomorrow the world would go to pieces, I would still plant my apple tree.</i></blockquote>
+<blockquote><i>Even if I knew that tomorrow the world would go to pieces, I would still plant my apple tree.</i></blockquote>
 
  <p style="text-align:right; font-size:13px;">~ Attributed to Martin Luther (original person unknown)</p>
 
