--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </li>
   </ol>
 	
-  <img src="images/kejriwal_riya.jpg" class="center"/>
+  <img src="images/Kejriwal_Riya.jpg" class="center"/>
 
   <p><strong>A fun fact about me:</strong> Name any country or city, and I can probably tell you if they have a carbon pricing scheme (and what kind)! <em>...Ask me this over a game of chess &#128521;</em></p>	
 
